// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 1.default-split 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded"
  style={
    Object {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": 0,
      }
    }
  />
</div>
`;

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 2.animated-collapse 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded lucid-SplitHorizontal-is-animated"
  style={
    Object {
      "flex": 1,
      "height": "100%",
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": Object {
          "damping": 37,
          "precision": 1,
          "stiffness": 640,
          "val": 0,
        },
      }
    }
  />
</div>
`;

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 3.set-pane-as-primary 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded lucid-SplitHorizontal-is-animated"
  style={
    Object {
      "flex": 1,
      "height": "100%",
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": Object {
          "damping": 37,
          "precision": 1,
          "stiffness": 640,
          "val": 0,
        },
      }
    }
  />
</div>
`;

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 4.set-height-of-pane 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded"
  style={
    Object {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": 0,
      }
    }
  />
</div>
`;

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 5.customize-divider 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded"
  style={
    Object {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": 0,
      }
    }
  />
</div>
`;

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 6.no-animation 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded"
  style={
    Object {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": 0,
      }
    }
  />
</div>
`;

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 7.collapse-shift 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded lucid-SplitHorizontal-is-animated"
  style={
    Object {
      "flex": 1,
      "height": "100%",
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": Object {
          "damping": 37,
          "precision": 1,
          "stiffness": 640,
          "val": 0,
        },
      }
    }
  />
</div>
`;

exports[`SplitHorizontal [common] example testing should match snapshot(s) for 8.handle-resize 1`] = `
<div
  className="lucid-SplitHorizontal lucid-SplitHorizontal-is-expanded"
  style={
    Object {
      "flex": 1,
      "height": "100%",
      "overflow": "hidden",
    }
  }
>
  <Motion
    defaultStyle={
      Object {
        "slideAmount": 0,
      }
    }
    style={
      Object {
        "slideAmount": 0,
      }
    }
  />
</div>
`;
